# CrudAPI

./: .gitignore  README.md  docker-compose  requirements.txt
api/: Dockerfile  LICENSE  pyproject.toml
api/configs/base/: database.yaml  setting.yaml
api/configs/local/: .secret.yaml  database.yaml
api/crud_api/: __init__.py  __main__.py
api/crud_api/controller/: car.py  database.py  utils.py
api/crud_api/database/: configuration.py  dependencies.py  postgres_configuration.py  setup_configuration.py  sqlite_configuration.py
api/crud_api/service/: database.py
api/crud_api/utils/: constant.py
configs/base/: database.yaml
configs/local/: database.yaml
crud_api/controller/: car.py  database.py  swagger.py
crud_api/database/: configuration.py
crud_api/response/: car.py
crud_api/service/: car.py
crud_api/utils/: constant.py
db/: Dockerfile
db/data/: data.csv
db/scripts/postgres/: create_database.sql  feed_database.sql
db/scripts/sqlite/: create_database.sql
